--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
+    "@types/papaparse": "latest",
     "autoprefixer": "10.4.18",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.4",
